[tool.poetry]
name = "extra-qt"
version = "0.1.0"
description = "React-like bindings for PyQt5 without JavaScript."
authors = ["Conrad Stansbury <chstansbury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
